--- a/views/index.ejs
+++ b/views/index.ejs
@@ -503,6 +503,14 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="span12 pull-center">
+            <div class="span2 offset1">
+                <a href="http://www.mah.se/" target="_blank"><img class="thumbnail pull-center"
+                                                                               src='http://cdn.mah.se/images/header/sv/logo_sv.jpg'/></a>
+            </div>
+        </div>
+    </div>
 
 </section>
 <hr>
