adding quotes, pics, media

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -216,6 +216,7 @@
                 <ul class="nav" id="section-menu">
                     <li id="menuIntro"><a href="/#Intro" title="Hem">Hem</a></li>
                     <li id="menuVad"><a href="/#Vad" title="Vad">Vad</a></li>
+                    <li id="menuOne"><a href="/#one" title="One">Kidscraft #1</a></li>
                     <li id="menuVem"><a href="/#Vem" title="Vem">Vem</a></li>
                     <li id="menuSponsorer"><a href="/#Sponsorer" title="Sponsorer">Sponsorer</a></li>
                     <li id="menuKontakt"><a href="/#Kontakt" title="Kontakt">Kontakt</a></li>
@@ -352,31 +353,124 @@
             byggprojekt och andra ideer låt oss <a href="#Kontakt">veta</a> nedan. Det skall bli superkul att ha dig
             med!
         </p>
+    </div>
 
-        <h2>När?</h2>
+</section>
+<section id="one">
+    <div class="span6 pull-center">
+        <h1>Kidscraft#1</h1>
 
         <p>24. Augusti 2013, 13.00 - 18.00</p>
-
-        <h2>Var?</h2>
-
         <p>Stapeln, Stapelbäddsgatan 3, 211 19 Malmö</p>
+        <p>100 barn 8-14 år, 20% tjejer, 100% nöjda</p>
 
-        <h2>Hur?</h2>
+        <h2>Några bilder</h2>
 
-        <p>Anmäl dig här</p>
-
-        <div style="pull-center width:195px; text-align:center;">
-            <iframe src="http://www.eventbrite.com/countdown-widget?eid=577891489" frameborder="0" height="394"
-                    width="195" marginheight="0" marginwidth="0" scrolling="no" allowtransparency="true"></iframe>
-            <div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:195px; text-align:center;">
-                <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/ecount">Event
-                    management</a><span style="color:#ddd;"> for </span><a style="color:#ddd; text-decoration:none;"
-                                                                           target="_blank"
-                                                                           href="http://www.eventbrite.com/event/577891489?ref=ecount">Kidscraft!</a>
-                <span style="color:#ddd;">powered by</span> <a style="color:#ddd; text-decoration:none;" target="_blank"
-                                                               href="http://www.eventbrite.com?ref=ecount">Eventbrite</a>
-            </div>
+        <div>
+            <ul class="thumbnails">
+                <li class="span2">
+                    <div class="thumbnail">
+                        <img src="/img/24_08_2013/pn_1.jpg" alt="">
+                        <h4>Karl Neubauer, 9 och Kevin Taverner 9</h4>
+                    </div>
+                </li>
+                <li class="span2">
+                    <div class="thumbnail">
+                        <img src="/img/24_08_2013/pn_2.jpg" alt="">
+                        <h4>Fullt spelande</h4>
+                    </div>
+                </li>
+                <li class="span2">
+                    <div class="thumbnail">
+                        <img src="/img/24_08_2013/pn_3.jpg" alt="">
+                        <h4>Visning av egna byggen på scen</h4>
+                    </div>
+                </li>
+                <li class="span2">
+                    <div class="thumbnail">
+                        <img src="/img/24_08_2013/pn_4.jpg" alt="">
+                        <h4>På scen med mic</h4>
+                    </div>
+                </li>
+                <li class="span2">
+                    <div class="thumbnail">
+                        <img src="/img/24_08_2013/pn_5.jpg" alt="">
+                        <h4>Konserthallen, STPLN</h4>
+                    </div>
+                </li>
+            </ul>
         </div>
+        <h2>Röster om Kidscraft#1 från barnen</h2>
+        <blockquote><p>Det har varit jätteroligt idag, det bästa var när alla fick visa upp vad de byggt</p>
+            <small>Elias 10 år</small>
+        </blockquote>
+        <blockquote><p>Hej! Visste inte om detta förrän det var för sent att anmäla sig. Hoppas det blir fler gånger.
+            Blir det fler gånger?</p>
+            <small>Måns 11 år</small>
+        </blockquote>
+        <blockquote><p>Det var jätte kul hoppas inte att det var sista gången</p>
+            <small></small>
+        </blockquote>
+        <blockquote><p>Hej, Tack för ett fantastiskt event. Vi körde från Hästveda för att vara med och vi ångrar inget.
+            Många tack för en super eftermiddag med Minecraft!</p>
+            <small>Henrik och Neo</small>
+        </blockquote>
+        <blockquote><p>ack för en jätte bra dag! Mina två barn tycker det var den bästa dagen på länge! Hoppas att ni
+            kan få till ett event igen.</p>
+            <small>Martin</small>
+        </blockquote>
+        <blockquote><p>Challe 9 år Hanna 5 år ... det är var coolt mamma! Tack för att vi kunde kika in i em - härligt jobbat alla engagerade!</p>
+            <small>Charlotte</small>
+        </blockquote>
+        <h2>Kidscraft#1 i Media</h2>
+        <blockquote class="twitter-tweet" data-partner="tweetdeck"><p>Hundra barn samlades på spelträff i <a
+                href="https://twitter.com/search?q=%23Malm%C3%B6&amp;src=hash">#Malmö</a>. <a
+                href="https://twitter.com/search?q=%23kidscraft&amp;src=hash">#kidscraft</a> <a
+                href="https://twitter.com/search?q=%23stpln&amp;src=hash">#stpln</a> <a href="http://t.co/O3KRvm56or">http://t.co/O3KRvm56or</a>
+        </p>&mdash; Sydsvenskan (@sydsvenskan) <a href="https://twitter.com/sydsvenskan/statuses/371315564859654144">August
+            24, 2013</a></blockquote>
+        <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <blockquote class="twitter-tweet"><p>Sydsvenskan: Skånes första Minecraft-LAN i Malmö idag, <a
+                href="http://t.co/xyz8PKXlC2">http://t.co/xyz8PKXlC2</a> <a
+                href="https://twitter.com/search?q=%23kidscraft&amp;src=hash">#kidscraft</a> <a
+                href="https://twitter.com/search?q=%23stpln&amp;src=hash">#stpln</a></p>&mdash; Stefan Pålsson
+            (@stefan_palsson) <a href="https://twitter.com/stefan_palsson/statuses/371388514694627328">August 24,
+                2013</a></blockquote>
+        <iframe src="//instagram.com/p/dZs2-3H_VT/embed/" width="612" height="710" frameborder="0" scrolling="no"
+                allowtransparency="true"></iframe>
+        <blockquote class="twitter-tweet" data-partner="tweetdeck"><p>Vi har nu stängt av musiken. Alla barn vill på
+            scen med sina alster live och med mic. Fantastiskt! <a
+                    href="https://twitter.com/search?q=%23FB&amp;src=hash">#FB</a> <a
+                    href="https://twitter.com/search?q=%23Kidscraft&amp;src=hash">#Kidscraft</a> <a
+                    href="http://t.co/hR6RcDkf7U">pic.twitter.com/hR6RcDkf7U</a></p>&mdash; Peter Neubauer
+            (@peterneubauer) <a href="https://twitter.com/peterneubauer/statuses/371297390785216512">August 24, 2013</a>
+        </blockquote>
+        <blockquote class="twitter-tweet"><p>Kids queuing to demo their creations on stage at kidscraft.se in Malmö!
+            Great success! <a href="http://t.co/yI5e8nt5cN">http://t.co/yI5e8nt5cN</a></p>&mdash; Craig Taverner
+            (@craigtaverner) <a href="https://twitter.com/craigtaverner/statuses/371338908799598592">August 24, 2013</a>
+        </blockquote>
+        <iframe src="//instagram.com/p/dZ-4aQD3KV/embed/" width="612" height="710" frameborder="0" scrolling="no"
+                allowtransparency="true"></iframe>
+        <blockquote class="twitter-tweet" data-partner="tweetdeck"><p>Hugo 10 år, Wille 10 år och Jonatan 11år byggde en
+            Stormtrooper! <a href="https://twitter.com/search?q=%23kidscraft&amp;src=hash">#kidscraft</a> <a
+                    href="https://twitter.com/search?q=%23minecraft&amp;src=hash">#minecraft</a> @ STPLN <a
+                    href="http://t.co/fFwjeHfRdJ">http://t.co/fFwjeHfRdJ</a></p>&mdash; Chris Jonasson (@Chrishka) <a
+                href="https://twitter.com/Chrishka/statuses/371294411562708992">August 24, 2013</a></blockquote>
+        <iframe src="//instagram.com/p/dZq0z9H_RL/embed/" width="612" height="710" frameborder="0" scrolling="no"
+                allowtransparency="true"></iframe>
+        <blockquote class="twitter-tweet" data-partner="tweetdeck"><p>the <a
+                href="https://twitter.com/search?q=%23Kidscraft&amp;src=hash">#Kidscraft</a> sign in the slime world,
+            thanks for the swag <a href="https://twitter.com/jeb">@jeb</a>! <a
+                    href="https://twitter.com/search?q=%23fb&amp;src=hash">#fb</a> <a
+                    href="https://twitter.com/search?q=%23in&amp;src=hash">#in</a>  <a href="http://t.co/i2zE7HkOsu">pic.twitter.com/i2zE7HkOsu</a>
+        </p>&mdash; Peter Neubauer (@peterneubauer) <a
+                href="https://twitter.com/peterneubauer/statuses/371291213317820416">August 24, 2013</a></blockquote>
+        <blockquote class="twitter-tweet" data-partner="tweetdeck"><p>Har nog aldrig varit med om så lugnt ställe som
+            innehöll 90 ungdomar i åldern 8-14 <a href="https://twitter.com/search?q=%23Kidscraft&amp;src=hash">#Kidscraft</a>
+            helt underbart. vilken koncentration</p>&mdash; Finnur Sverrisson (@finnur) <a
+                href="https://twitter.com/finnur/statuses/371289146855555072">August 24, 2013</a></blockquote>
+    </div>
+
 
 </section>
 <hr>
@@ -450,7 +544,12 @@
                         href='http://se.linkedin.com/in/magnusrobertsson/' target='_blank'>LinkedIn</a>
             </div>
             <div class="span2">
+                <img class="thumbnail img-rounded"
+                     src='http://www.nav.mah.se/person/picture/ksjohe'/>
 
+                <h3>Joakim Hellberg</h3>
+                <a
+                        href='http://www.nav.mah.se/person/id/KSJOHE' target='_blank'>Malmö Högskola</a>
             </div>
             <div class="span2">
             </div>
@@ -507,7 +606,7 @@
         <div class="span12 pull-center">
             <div class="span2 offset1">
                 <a href="http://www.mah.se/" target="_blank"><img class="thumbnail pull-center"
-                                                                               src='http://cdn.mah.se/images/header/sv/logo_sv.jpg'/></a>
+                                                                  src='http://cdn.mah.se/images/header/sv/logo_sv.jpg'/></a>
             </div>
         </div>
     </div>
