adding more media

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -361,7 +361,9 @@
         <h1>Kidscraft#1</h1>
 
         <p>24. Augusti 2013, 13.00 - 18.00</p>
+
         <p>Stapeln, Stapelbäddsgatan 3, 211 19 Malmö</p>
+
         <p>100 barn 8-14 år, 20% tjejer, 100% nöjda</p>
 
         <h2>Några bilder</h2>
@@ -411,6 +413,10 @@
         <blockquote><p>Det var jätte kul hoppas inte att det var sista gången</p>
             <small></small>
         </blockquote>
+        <blockquote><p>Det fanns ett par stycken som försökte tända eld på andras hus i spelet, men de blev tillsagda av
+            arrangörerna direkt.</p>
+            <small></small>
+        </blockquote>
         <blockquote><p>Hej, Tack för ett fantastiskt event. Vi körde från Hästveda för att vara med och vi ångrar inget.
             Många tack för en super eftermiddag med Minecraft!</p>
             <small>Henrik och Neo</small>
@@ -419,7 +425,8 @@
             kan få till ett event igen.</p>
             <small>Martin</small>
         </blockquote>
-        <blockquote><p>Challe 9 år Hanna 5 år ... det är var coolt mamma! Tack för att vi kunde kika in i em - härligt jobbat alla engagerade!</p>
+        <blockquote><p>Challe 9 år Hanna 5 år ... det är var coolt mamma! Tack för att vi kunde kika in i em - härligt
+            jobbat alla engagerade!</p>
             <small>Charlotte</small>
         </blockquote>
         <h2>Kidscraft#1 i Media</h2>
@@ -469,6 +476,12 @@
             innehöll 90 ungdomar i åldern 8-14 <a href="https://twitter.com/search?q=%23Kidscraft&amp;src=hash">#Kidscraft</a>
             helt underbart. vilken koncentration</p>&mdash; Finnur Sverrisson (@finnur) <a
                 href="https://twitter.com/finnur/statuses/371289146855555072">August 24, 2013</a></blockquote>
+        <blockquote class="twitter-tweet"><p>tack <a href="https://twitter.com/Kvallsposten">@kvallsposten</a> för en
+            trevlig artikel om lördagens <a href="https://twitter.com/search?q=%23Kidscraft&amp;src=hash">#Kidscraft</a>!
+            <a href="https://twitter.com/search?q=%23in&amp;src=hash">#in</a> <a
+                    href="https://twitter.com/search?q=%23FB&amp;src=hash">#FB</a>  <a href="http://t.co/62r7rYdcMu">pic.twitter.com/62r7rYdcMu</a>
+        </p>&mdash; Peter Neubauer (@peterneubauer) <a
+                href="https://twitter.com/peterneubauer/statuses/371889380925124608">August 26, 2013</a></blockquote>
     </div>
 
 
