full size links

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -372,31 +372,36 @@
             <ul class="thumbnails">
                 <li class="span2">
                     <div class="thumbnail">
-                        <img src="/img/24_08_2013/pn_1.jpg" alt="">
+                        <a href="/img/24_08_2013/pn_1.jpg" target="_blank"><img src="/img/24_08_2013/pn_1.jpg"
+                                                                                alt=""></a>
                         <h4>Karl Neubauer, 9 och Kevin Taverner 9</h4>
                     </div>
                 </li>
                 <li class="span2">
                     <div class="thumbnail">
-                        <img src="/img/24_08_2013/pn_2.jpg" alt="">
+                        <a href="/img/24_08_2013/pn_1.jpg" target="_blank"><img src="/img/24_08_2013/pn_2.jpg" alt="">
+                        </a>
                         <h4>Fullt spelande</h4>
                     </div>
                 </li>
                 <li class="span2">
                     <div class="thumbnail">
-                        <img src="/img/24_08_2013/pn_3.jpg" alt="">
+                        <a href="/img/24_08_2013/pn_1.jpg" target="_blank"><img src="/img/24_08_2013/pn_3.jpg"
+                                                                                alt=""></a>
                         <h4>Visning av egna byggen på scen</h4>
                     </div>
                 </li>
                 <li class="span2">
                     <div class="thumbnail">
-                        <img src="/img/24_08_2013/pn_4.jpg" alt="">
+                        <a href="/img/24_08_2013/pn_1.jpg" target="_blank"><img src="/img/24_08_2013/pn_4.jpg" alt="">
+                        </a>
                         <h4>På scen med mic</h4>
                     </div>
                 </li>
                 <li class="span2">
                     <div class="thumbnail">
-                        <img src="/img/24_08_2013/pn_5.jpg" alt="">
+                        <a href="/img/24_08_2013/pn_1.jpg" target="_blank"><img src="/img/24_08_2013/pn_5.jpg"
+                                                                                alt=""></a>
                         <h4>Konserthallen, STPLN</h4>
                     </div>
                 </li>
