--- a/views/index.ejs
+++ b/views/index.ejs
@@ -503,8 +503,8 @@
                 <img class="thumbnail img-rounded"
                      src='http://dl.dropboxusercontent.com/u/5925006/profile/peter_mini.png'/>
 
-                <h3>Peter Neubauer</h3>
-                Vi älskar att göra Malmö till ett nav för entreprenörskap, innovation och lärande. <a
+                <h3>Peter Neubauer, Initiativtagare</h3>
+                Jag älskar att göra Malmö till ett nav för entreprenörskap, innovation och lärande. <a
                     href='http://se.linkedin.com/in/neubauer' target='_blank'>Peter Neubauer</a>
             </div>
             <div class="span2">
