--- a/views/index.ejs
+++ b/views/index.ejs
@@ -495,7 +495,7 @@
 
 
 <section id="Vem" class="sec sec3 ">
-    <h2></h2>
+    <h2>Vem driver Kidscraft?</h2>
 
     <div class="container">
         <div class="span12 pull-center">
