--- a/views/index.ejs
+++ b/views/index.ejs
@@ -526,6 +526,7 @@
     </div>
     <div class="container">
         <div class="span12 pull-center">
+            <h2>Våra sponsorer</h2>
             <div class="span2 offset2">
                 <img class="thumbnail img-rounded"
                      src='/img/SiSk-Portraits_Adrian.jpg'/>
