mer bilder, gänget

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -360,11 +360,25 @@
     <div class="span6 pull-center">
         <h1>Kidscraft#1</h1>
 
+        <div class="thumbnail">
+            <a href="/img/24_08_2013/mr_3.jpg" target="_blank"><img src="/img/24_08_2013/mr_3.jpg"
+                                                                    alt=""></a>
+            <h4>Gänget</h4>
+        </div>
+
         <p>24. Augusti 2013, 13.00 - 18.00</p>
 
         <p>Stapeln, Stapelbäddsgatan 3, 211 19 Malmö</p>
 
         <p>100 barn 8-14 år, 20% tjejer, 100% nöjda</p>
+
+        <h2>Kidscraft #1 världar</h2>
+
+        <p>Klicka <a class="btn" href="https://dl.dropboxusercontent.com/u/5925006/kidscraft%231/worlds.zip">här</a> för
+            att ladda
+            ner alla världar som barnen skapade med Minecraft 1.6.2. Zippa upp de i din minecraft folder under /saves/,
+            se även <a href="http://www.youtube.com/watch?v=ZSS4gPmLR8Y">denna video</a> om hur man gör.
+        </p>
 
         <h2>Några bilder</h2>
 
@@ -405,6 +419,20 @@
                         <h4>Konserthallen, STPLN</h4>
                     </div>
                 </li>
+                <li class="span2">
+                    <div class="thumbnail">
+                        <a href="/img/24_08_2013/mr_1.jpg" target="_blank"><img src="/img/24_08_2013/mr_1.jpg"
+                                                                                alt=""></a>
+                        <h4>Sticker parade från Malmö</h4>
+                    </div>
+                </li>
+                <li class="span2">
+                    <div class="thumbnail">
+                        <a href="/img/24_08_2013/mr_2.jpg" target="_blank"><img src="/img/24_08_2013/mr_2.jpg"
+                                                                                alt=""></a>
+                        <h4>Servrarna</h4>
+                    </div>
+                </li>
             </ul>
         </div>
         <h2>Röster om Kidscraft#1 från barnen</h2>
@@ -434,6 +462,8 @@
             jobbat alla engagerade!</p>
             <small>Charlotte</small>
         </blockquote>
+
+
         <h2>Kidscraft#1 i Media</h2>
         <blockquote class="twitter-tweet" data-partner="tweetdeck"><p>Hundra barn samlades på spelträff i <a
                 href="https://twitter.com/search?q=%23Malm%C3%B6&amp;src=hash">#Malmö</a>. <a
@@ -527,6 +557,7 @@
     <div class="container">
         <div class="span12 pull-center">
             <h2>Våra sponsorer</h2>
+
             <div class="span2 offset2">
                 <img class="thumbnail img-rounded"
                      src='/img/SiSk-Portraits_Adrian.jpg'/>
@@ -721,10 +752,17 @@
 </body>
 
 <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', 'UA-43525210-1', 'kidscraft.se');
     ga('send', 'pageview');
