--- a/views/index.ejs
+++ b/views/index.ejs
@@ -360,11 +360,13 @@
     <div class="span6 pull-center">
         <h1>Kidscraft#1</h1>
 
-        <div class="thumbnail">
-            <a href="/img/24_08_2013/mr_3.jpg" target="_blank"><img src="/img/24_08_2013/mr_3.jpg"
-                                                                    alt=""></a>
-            <h4>Gänget</h4>
-        </div>
+        <ul class="thumbnails">
+            <li class="thumbnail">
+                <a href="/img/24_08_2013/mr_3.jpg" target="_blank"><img src="/img/24_08_2013/mr_3.jpg"
+                                                                        alt=""></a>
+                <h4>Gänget</h4>
+            </li>
+        </ul>
 
         <p>24. Augusti 2013, 13.00 - 18.00</p>
 
