--- a/views/index.ejs
+++ b/views/index.ejs
@@ -363,7 +363,7 @@
         <ul class="thumbnails">
             <li class="thumbnail">
                 <a href="/img/24_08_2013/mr_3.jpg" target="_blank"><img src="/img/24_08_2013/mr_3.jpg"
-                                                                        alt=""></a>
+                                                                        alt=""/></a>
                 <h4>Gänget</h4>
             </li>
         </ul>
@@ -424,14 +424,14 @@
                 <li class="span2">
                     <div class="thumbnail">
                         <a href="/img/24_08_2013/mr_1.jpg" target="_blank"><img src="/img/24_08_2013/mr_1.jpg"
-                                                                                alt=""></a>
+                                                                                alt=""/></a>
                         <h4>Sticker parade från Malmö</h4>
                     </div>
                 </li>
                 <li class="span2">
                     <div class="thumbnail">
                         <a href="/img/24_08_2013/mr_2.jpg" target="_blank"><img src="/img/24_08_2013/mr_2.jpg"
-                                                                                alt=""></a>
+                                                                                alt=""/></a>
                         <h4>Servrarna</h4>
                     </div>
                 </li>
