Fixed absolute link to bukkit.org
Heja heja!

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -348,7 +348,7 @@
         </ul>
 
         <p>Om du har tips, funeringar eller önskemål om server setups (till exempel - vill du spela på en <a
-                href="bukkit.org">Bukkit</a>
+                href="http://bukkit.org/">Bukkit</a>
             Server?),
             byggprojekt och andra ideer låt oss <a href="#Kontakt">veta</a> nedan. Det skall bli superkul att ha dig
             med!
