Added fake comment for refreshing

--- a/new/style.css
+++ b/new/style.css
@@ -51,6 +51,7 @@ body {
 	text-align: center;
 	box-shadow: inset 3px 4px 9px -6px;
 }
+/**/
 #header #nav #menu a { text-decoration: none; }
 #header #nav #menu a:link, a:visited { color: black; }
 #header #nav #menu a:hover { color: black; }
