--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
 	margin: 0;
-	background: url(img/background-fade.png);
+	background: url(img/backgroundCraftmas.png) top right no-repeat;
+	background-attachment: fixed;
 	background-size: 100% auto;
-	background-repeat: no-repeat;
-	background-color: #546D33;
+	background-color: #160805;
 	font-family: 'Oswald', sans-serif;
 }
 #header {
@@ -12,14 +12,16 @@ body {
 	width: 100%;
 	height: 70px;
 	position: fixed;
-	box-shadow: 0 8px 10px -5px gray;
+	box-shadow: 0 8px 10px -5px #000000;
+	background: url(img/headerBg.png) top right;
+	#background-size: 70px auto;
 }
 #headerShadow {
 	z-index: -1;
 	width: 100%;
 	height: 70px;
 	position: fixed;
-	box-shadow: 0 8px 10px -2px gray;
+	box-shadow: 0 8px 10px -2px #000000;
 }
 #header #logo {
 	height: 100%;
@@ -27,8 +29,8 @@ body {
 	float: left;
 }
 #header #logo img {
-	vertical-align: center;
 	margin-left: 5px;
+	padding-top: 0;
 }
 #header #nav {
 	float: right;
@@ -43,16 +45,19 @@ body {
 	bottom: 0;
 }
 #header #nav #menu .menuButton {
-	background: #BCBCBC;
+	background: rgba(0,0,0,0.5);
 	height: 100%;
 	width: 25%;
 	float: left;
 	text-align: center;
-	box-shadow: inset 3px 4px 9px -6px;
+	box-shadow: inset 6px 4px 9px -6px #000000;
 }
-#header #nav #menu a { text-decoration: none; }
-#header #nav #menu a:link, a:visited { color: black; }
-#header #nav #menu a:hover { color: black; }
+#header #nav #menu a {
+	text-decoration: none;
+	color: white;
+}
+#header #nav #menu a:link, a:visited { color: white; }
+#header #nav #menu a:hover { color: white; }
 #header #nav #menu .menuButton span{
 	display: inline-block;
 	vertical-align: middle;
@@ -123,4 +128,23 @@ body {
 	-webkit-box-shadow:0px 0px 2px #bababa, inset 0px 0px 1px #ffffff; 
 	-moz-box-shadow: 0px 0px 2px #bababa,  inset 0px 0px 1px #ffffff;  
 	box-shadow:0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;  
+}
+
+#snowflakeContainer {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+}
+.snowflake {
+    padding-left: 15px;
+    user-select: none;
+    z-index: 1000;
+}
+.snowflake img {
+	position: fixed;
+	width: 5px;
+    height: auto;
+}
+.snowflake:hover {
+    cursor: default;
 }
