--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
 	text-decoration: none;
 	color: white;
 }
-#header #nav #menu a:link, a:visited { color: white; }
+#header #nav #menu a:link, #header #nav #menu  a:visited { color: white; }
 #header #nav #menu a:hover { color: white; }
 #header #nav #menu .menuButton span{
 	display: inline-block;
@@ -147,4 +147,7 @@ body {
 }
 .snowflake:hover {
     cursor: default;
+}
+.center {
+	text-align: middle;
 }
